@@ -42,7 +42,6 @@ import org.apache.hadoop.hive.metastore.api.FieldSchema;
 import org.apache.hadoop.hive.metastore.api.InvalidOperationException;
 import org.apache.hadoop.hive.metastore.api.MetaException;
 import org.apache.hadoop.hive.metastore.api.NoSuchObjectException;
-import org.apache.hadoop.hive.metastore.api.UnknownTableException;
 import org.apache.hadoop.hive.ql.parse.ParseDriver;
 import org.apache.hadoop.hive.serde2.Deserializer;
 import org.apache.hadoop.hive.serde2.SerDeException;
@@ -214,26 +213,54 @@ public class Hive {
    * Drops table along with the data in it. If the table doesn't exist then it is a no-op
    * @param tableName
    * @throws HiveException
+   * @deprecated Use {@link #dropTable(String, String)} instead
    */
   public void dropTable(String tableName) throws HiveException {
     dropTable(tableName, true, true);
+  }
+
+  
+  /**
+   * Drops table along with the data in it. If the table doesn't exist
+   * then it is a no-op
+   * @param dbName database where the table lives
+   * @param tableName table to drop
+   * @throws HiveException thrown if the drop fails
+   */
+  public void dropTable(String dbName, String tableName) throws HiveException {
+    dropTable(dbName, tableName, true, true);
+  }  
+  
+  /**
+   * Drops the table. 
+   * @param tableName
+   * @param deleteData deletes the underlying data along with metadata
+   * @param ignoreUnknownTab an exception if thrown if this is falser
+   * and table doesn't exist
+   * @throws HiveException
+   * @deprecated Use {@link #dropTable(String, String, boolean, boolean)} instead
+   */
+  public void dropTable(String tableName, boolean deleteData, 
+      boolean ignoreUnknownTab) throws HiveException {
+    
+    dropTable(MetaStoreUtils.DEFAULT_DATABASE_NAME, tableName,
+        deleteData, ignoreUnknownTab);
   }
 
   /**
    * Drops the table. 
    * @param tableName
    * @param deleteData deletes the underlying data along with metadata
-   * @param ignoreUnknownTab an exception if thrown if this is falser and table doesn't exist
+   * @param ignoreUnknownTab an exception if thrown if this is falser and
+   * table doesn't exist
    * @throws HiveException
    */
-  public void dropTable(String tableName, boolean deleteData, boolean ignoreUnknownTab) throws HiveException {
+  public void dropTable(String dbName, String tableName, boolean deleteData,
+      boolean ignoreUnknownTab) throws HiveException {
+    
     try {
-      msc.dropTable(tableName, deleteData);
+      msc.dropTable(dbName, tableName, deleteData, ignoreUnknownTab);
     } catch (NoSuchObjectException e) {
-      if (!ignoreUnknownTab) {
-        throw new HiveException(e);
-      }
-    } catch (UnknownTableException e) {
       if (!ignoreUnknownTab) {
         throw new HiveException(e);
       }
@@ -250,20 +277,55 @@ public class Hive {
    * Returns metadata of the table. 
    * @param tableName the name of the table
    * @return the table
-   * @exception HiveException if there's an internal error or if the table doesn't exist 
+   * @exception HiveException if there's an internal error or if the 
+   * table doesn't exist 
+   * @deprecated Use {@link #getTable(String, String)} instead
    */
   public Table getTable(final String tableName) throws HiveException {
     return this.getTable(tableName, true);
   }
   
   /**
+   * Returns metadata of the table. 
+   * @param dbName the name of the database
+   * @param tableName the name of the table
+   * @return the table
+   * @exception HiveException if there's an internal error or if the 
+   * table doesn't exist 
+   */
+  public Table getTable(final String dbName, final String tableName) 
+    throws HiveException {
+    
+    return this.getTable(dbName, tableName, true);
+  }  
+  
+  /**
    * Returns metadata of the table
-   * @param tableName
-   * @param throwException controls whether an exception is thrown or a returns a null
-   * @return
+   * @param tableName the name of the table
+   * @param throwException controls whether an exception is 
+   * thrown or a null returned
+   * @return the table or if something false and 
+   * throwException is false a null value.
+   * @throws HiveException
+   * @deprecated Use {@link #getTable(String, String, boolean)} instead
+   */
+  public Table getTable(final String tableName, boolean throwException) 
+    throws HiveException {
+    return getTable(MetaStoreUtils.DEFAULT_DATABASE_NAME, tableName, 
+        throwException);
+  }
+  
+  /**
+   * Returns metadata of the table
+   * @param dbName the name of the database
+   * @param tableName the name of the table
+   * @param throwException controls whether an exception is thrown 
+   * or a returns a null
+   * @return the table or if throwException is false a null value.
    * @throws HiveException
    */
-  public Table getTable(final String tableName, boolean throwException) throws HiveException {
+  public Table getTable(final String dbName, final String tableName, 
+      boolean throwException) throws HiveException {
 
     if(tableName == null || tableName.equals("")) {
       throw new HiveException("empty table creation??");
@@ -271,7 +333,7 @@ public class Hive {
     Table table = new Table();
     org.apache.hadoop.hive.metastore.api.Table tTable = null;
     try {
-      tTable = msc.getTable(tableName);
+      tTable = msc.getTable(dbName, tableName);
     } catch (NoSuchObjectException e) {
       if(throwException) {
         LOG.error(StringUtils.stringifyException(e));
@@ -509,16 +571,6 @@ public class Hive {
       List<Partition> parts = new ArrayList<Partition>(tParts.size());
       for (org.apache.hadoop.hive.metastore.api.Partition tpart : tParts) {
         parts.add(new Partition(tbl, tpart));
-      }
-      // get the partitions on the HDFS location
-      List<Partition> hdfsPartitions = tbl.getPartitionsFromHDFS();
-      if(hdfsPartitions.size() != parts.size()) {
-        // HACK: either we are connecting to old metastore or metadata is out of sync with data
-        // TODO: for the former case, move this logic into OLD metastore and compare 
-        // the two lists here for any conflict between metadata and data
-        LOG.error("Metadata for partitions doesn't match the data in HDFS. Table name: " + tbl.getName());
-        // let's trust hdfs partitions for now
-        return hdfsPartitions;
       }
       return parts;
     } else {
