@@ -26,6 +26,9 @@ Trunk (unreleased changes)
 
   IMPROVEMENTS
 
+    HIVE-192. Add database name parameter to getTable and dropTable.
+    (Johan Oskarsson via zshao)
+
     HIVE-181. Restore UDFTestLength unit test for UDFs.
     (David Phillips via zshao)
 
